[project]
name = "python_toolkit"
readme = "README.md"
dynamic = ["version", "description"]

authors = [
    { name = "BHoM", email = "bhombot@burohappold.com" }
]

dependencies = [
    "case-converter",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "virtualenv",
]

[build-system]
requires = ["setuptools", "pywin32"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black",
    "ipykernel>=6.29.5",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-order",
    "sphinx>=8.1.3",
    "sphinx-bootstrap-theme>=0.8.1",
    "sphinxcontrib-fulltoc>=1.2.0",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.pytest.ini_options]
pythonpath = "src"
